--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <img class="pequena" src="./img/logo-agencia.jpg" alt="logo agencia">
+        <a href="./index.html"> <img class="pequena" src="./img/logo-agencia.jpg" alt="logo agencia"></a>
         <nav>
             <ul class="navega">
                 <li>
