--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <img class="pequena" src="./../img/logo-agencia.jpg" alt="logo agencia">
+        <a href="./../index.html"> <img class="pequena" src="./../img/logo-agencia.jpg" alt="logo agencia"></a>
         <nav>
             <ul class="navega">
                 <li>
