--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Agencia de viajes, especializada en destinos exoticos">
     <meta name="keywords" content="VIAJE, AGENCIA, TURISMO, GARANTIA, VUELOS, AVION, EUROPA">
-    <title>Agencia de Viajes</title>
+    <title>Agencia de Viajes/inicio</title>
     <link rel="icon" type="image/x-icon" href="./img/logo-agencia.jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -37,8 +37,7 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <main class="main-index">
+    <main class="main-index">
             <section>
                 <h1>Agencia de Viajes</h1>
                 <div class="container text-center">
@@ -67,6 +66,8 @@
                         </div>
                     </div>
                     <div class="col">
+                        <h2></h2>
+                        <h3></h3>
                         <h4>Nuestra Misión</h4>
                             <p class="parrafo">Ofrecemos a nuestros clientes viajes con itinerarios innovadores desarrollados por nosotros mismos. El trato es personalizado y brindamos excursiones de gran calidad. Esto lo logramos trabajando junto a un equipo que diseña cada itinerario para mostrar lo mejor de cada destino. Realizamos un seguimiento de cada viaje garantizando que todo salga según lo planificado para que nuestros clientes disfrutan de una experiencia inolvidable.</p>
                         <h4>Nuestra Vision</h4>
@@ -89,9 +90,6 @@
             </section>
     </main>
         <footer>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-            crossorigin="anonymous"></script>
             <div class="position-relative">
                 <a href="https://www.instagram.com" target="_blank"><img class="muy-pequena"
                         src="./img/logo-instagram.jpg" alt="Instagram"></a>
@@ -99,7 +97,9 @@
                             src="./img/logo-facebook.jpg" alt="Logo Facebook"></a>
             </div>
         </footer>
-
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
