--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Agencia de viajes, especializada en destinos exoticos">
-    <meta name="keywords" content="VIAJE, AGENCIA, TURISMO, GARANTIA, VUELOS, AVION, EUROPA">
-    <title>Agencia de Viajes</title>
+    <meta name="description" content="Agencia de viajes, contacto">
+    <meta name="keywords" content="VIAJE, AGENCIA, TURISMO, CONTACTO">
+    <title>Agencia de Viaje/contacto</title>
     <link rel="icon" type="image/x-icon" href="./../img/logo-agencia.jpg">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
