--- a/pages/destinos.html
+++ b/pages/destinos.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Agencia de viajes, especializada en destinos exoticos">
-    <meta name="keywords" content="VIAJE, AGENCIA, TURISMO, GARANTIA, VUELOS, AVION, EUROPA">
-    <title>Agencia de Viajes</title>
+    <meta name="description" content="Agencia de viajes, destinos en promoción">
+    <meta name="keywords" content="VIAJE, AGENCIA, TURISMO, VUELOS, DESTINOS, EXOTICO">
+    <title>Agencia de Viajes/destinos</title>
     <link rel="icon" type="image/x-icon" href="./../img/logo-agencia.jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -46,7 +46,7 @@
                     <img src="./../img/paris.jpg" alt="Paris">
                     <p class="descuento">30% OFF</p>
                     <div class="card-texto">
-                        <h2 >PARIS</h2>
+                        <h2>PARIS</h2>
                         <p>Descubre lo mejor de la capital francesa, rodaeado de historia y modernidad. Respira cultura a cada paso y vive la vibra parisina con un grupo extraoirdinario. Recorre los alrrededroes y sientete como en una pelicula. </p>
                     </div>
                 </div>
