--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Agencia de viajes, especializada en destinos exoticos">
-    <meta name="keywords" content="VIAJE, AGENCIA, TURISMO, GARANTIA, VUELOS, AVION, EUROPA">
-    <title>Agencia de Viajes</title>
+    <meta name="description" content="Agencia de viajes, galeria de imagenes">
+    <meta name="keywords" content="VIAJE, AGENCIA, TURISMO, GALERIA">
+    <title>Agencia de Viajes/galeria</title>
     <link rel="icon" type="image/x-icon" href="./../img/logo-agencia.jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -86,11 +86,11 @@
                     <a href="http://www.facebook.com" target="_blank"><img class="muy-pequena" src="./../img/logo-facebook.jpg"
                     alt="Logo Facebook"></a>
             </div>
-            <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-            <script>
-                AOS.init();
-            </script>
         </footer>
+        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+        <script>
+            AOS.init();
+        </script>
 </body>
 
 </html>
