--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Agencia de viajes, especializada en destinos exoticos">
-    <meta name="keywords" content="VIAJE, AGENCIA, TURISMO, GARANTIA, VUELOS, AVION, EUROPA">
-    <title>Agencia de Viajes</title>
+    <meta name="description" content="Agencia de viajes, donde encontrarnos">
+    <meta name="keywords" content="VIAJE, AGENCIA, NOSOTROS">
+    <title>Agencia de Viaje/nosotros</title>
     <link rel="icon" type="image/x-icon" href="./../img/logo-agencia.jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -39,6 +39,7 @@
     <main>
         <section>
             <h1>Nosotros</h1>
+            <h2></h2>
             <div class="container text-center">
                 <div class="row">
                     <div class="col">
@@ -66,9 +67,6 @@
         </section>
     <main>
         <footer>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-            crossorigin="anonymous"></script>
             <div class="position-relative">
                 <a href="https://www.instagram.com" target="_blank"><img class="muy-pequena"
                         src="./../img/logo-instagram.jpg" alt="Instagram"></a>
@@ -76,6 +74,9 @@
                             src="./../img/logo-facebook.jpg" alt="Logo Facebook"></a>
             </div>
         </footer>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
